--- a/about.html
+++ b/about.html
@@ -29,14 +29,14 @@
     <section class="contact">
         <div class="container">
             <h2>Contact Me</h2>
-            <p>Email: myemail@example.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: mglasier3@gatech.edu</p>
+            <p>Phone: (470)376-5767</p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Portfolio</p>
+            <p>&copy;Mariann Glasier's Portfolio</p>
         </div>
     </footer>
 </body>
