--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <section class="intro">
         <div class="container">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Explore my work, ideas, and projects.</p>
+            <h1>Mariann Glasier's Portfolio</h1>
+            <p>Thank you for exploring my portfolio.</p>
         </div>
     </section>
 
@@ -40,7 +40,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Portfolio</p>
+            <p>&copy; My Portfolio</p>
         </div>
     </footer>
 </body>
