--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy;Mariann Glasier's Portfolio</p>
+            <p>&copy; My Portfolio</p>
         </div>
     </footer>
 </body>
