--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <section class="about">
         <div class="container">
             <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada. Integer ultrices ligula a risus venenatis, a molestie nisi bibendum.</p>
+            <p>Hello there! I'm Mariann Glasier and I'm a Computational Media major at the Georgia Institute of Technology. I spend most of my time sketching and drawing and I love computers, which inspired me to choose Computational Media here at Tech. I grew up constantly creating art and this website includes pieces that I've worked on over the years. Thank you for exploring my portfolio!</p>
         </div>
     </section>
 
