--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <section class="intro">
         <div class="container">
             <h1>Mariann Glasier's Portfolio</h1>
-            <p>Thank you for exploring my portfolio.</p>
+            <p>My works throughout the years!</p>
         </div>
     </section>
 
     <section class="gallery">
         <div class="container">
-            <h2>Featured Works</h2>
+            <h2>My Works</h2>
             <div class="gallery-grid">
                 <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
                 <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
