--- a/gallery.html
+++ b/gallery.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Portfolio - Gallery</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
 
+  </head>
+<body>
+    <header>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+   <section class="gallery">
+        <div class="container">
+            <h2>My Works</h2>
+            <div class="gallery-grid">
+                <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
+                <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
+                <div class="gallery-item"><img src="img/work3.jpg" alt="Work 3"></div>
+                <div class="gallery-item"><img src="img/work4.jpg" alt="Work 4"></div>
+            </div>
+        </div>
+    </section>
