--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                 </ul>
             </nav>
         </div>
@@ -23,18 +24,6 @@
         <div class="container">
             <h1>Mariann Glasier's Portfolio</h1>
             <p>My works throughout the years!</p>
-        </div>
-    </section>
-
-    <section class="gallery">
-        <div class="container">
-            <h2>My Works</h2>
-            <div class="gallery-grid">
-                <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
-                <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
-                <div class="gallery-item"><img src="img/work3.jpg" alt="Work 3"></div>
-                <div class="gallery-item"><img src="img/work4.jpg" alt="Work 4"></div>
-            </div>
         </div>
     </section>
 
