--- a/gallery.html
+++ b/gallery.html
@@ -14,9 +14,9 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
+                  <li><a href="gallery.html" class="active">Gallery</a></li>
                 </ul>
             </nav>
         </div>
