--- a/inspiration.html
+++ b/inspiration.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio - Gallery</title>
+    <title>Portfolio - Inspirations</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -17,7 +17,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                   <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="inspiration.html" class="active">Inspiration</a></li>
+                  <li><a href="inspiration.html" class="active">Inspirations</a></li>
                 </ul>
             </nav>
         </div>
