--- a/inspiration.html
+++ b/inspiration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio - Inspirations</title>
@@ -14,10 +14,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                  <li><a href="gallery.html">Gallery</a></li>
-                  <li><a href="inspiration.html" class="active">Inspirations</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <liv><a href="inspiration.html" class="active">Inspirations</a></liv>
                 </ul>
             </nav>
         </div>
     </header>
-</html>
