--- a/inspiration.html
+++ b/inspiration.html
@@ -15,7 +15,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <liv><a href="inspiration.html" class="active">Inspirations</a></liv>
+                    <li><a href="inspiration.html" class="active">Inspirations</a></li>
                 </ul>
             </nav>
         </div>
