--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="inspiration.html">Inspirations</a></li>
                 </ul>
             </nav>
         </div>
