--- a/inspiration.html
+++ b/inspiration.html
@@ -20,5 +20,19 @@
             </nav>
         </div>
     </header>
+
+    <div class="container text-center">
+  <div class="row">
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+      Column
+    </div>
+  </div>
+</div>
 </body>
 </html>
