--- a/inspiration.html
+++ b/inspiration.html
@@ -20,17 +20,17 @@
             </nav>
         </div>
     </header>
-
-    <div class="container text-center">
-  <div class="row">
+    
+<div class="container text-center">
+  <div class="row align-items-center">
     <div class="col">
-      Column
+      One of three columns
     </div>
     <div class="col">
-      Column
+      One of three columns
     </div>
     <div class="col">
-      Column
+      One of three columns
     </div>
   </div>
 </div>
