--- a/inspiration.html
+++ b/inspiration.html
@@ -20,6 +20,10 @@
             </nav>
         </div>
     </header>
+
+    <div class="inspiration-info">
+        <p>Listed below are some examples of my favorite artists with some of my favorite works of their's that inspire the artwork that I create.</p>
+    </div>
     
 <div class="container text-center">
   <div class="row align-items-center">
