--- a/inspiration.html
+++ b/inspiration.html
@@ -22,6 +22,7 @@
     </header>
 
     <div class="inspiration-info">
+        <h1> Who inspires me?</h1>
         <p>Listed below are some examples of my favorite artists with some of my favorite works of their's that inspire the artwork that I create.</p>
     </div>
     
