--- a/inspiration.html
+++ b/inspiration.html
@@ -21,10 +21,12 @@
         </div>
     </header>
 
-    <div class="inspiration-info">
-        <h1> Who inspires me?</h1>
-        <p>Listed below are some examples of my favorite artists with some of my favorite works of their's that inspire the artwork that I create.</p>
-    </div>
+    <section class="inspo-info">
+        <div class="container">
+            <h1> Who inspires me?</h1>
+            <p>Listed below are some examples of my favorite artists with some of my favorite works of their's that inspire the artwork that I create.</p>
+        </div>
+    </section>
     
 <div class="container text-center">
   <div class="row align-items-center">
