--- a/inspiration.html
+++ b/inspiration.html
@@ -21,8 +21,8 @@
         </div>
     </header>
 
-    <section class="inspo-info">
-        <div class="container">
+    <section class="inspo-info" text-center>
+        <div class="container" text-center>
             <h1> Who inspires me?</h1>
             <p>Listed below are some examples of my favorite artists with some of my favorite works of their's that inspire the artwork that I create.</p>
         </div>
