--- a/inspiration.html
+++ b/inspiration.html
@@ -27,19 +27,27 @@
             <p>Listed below are some examples of my favorite artists with some of my favorite works of their's that inspire the artwork that I create.</p>
         </div>
     </section>
-    
-<div class="container text-center">
-  <div class="row align-items-center">
-    <div class="col">
-      One of three columns
+
+<section>
+    <div class="container text-center">
+      <div class="row align-items-center">
+        <div class="col">
+            <h1> Gustav Klimt</h1>
+          One of three columns
+            <div class="inspo-item"><img src="img/klimt.jpg" alt="Klimt's Work"></div>
+        </div>
+        <div class="col">
+            <h1>Jean-Michele Basquiat</h1>
+          One of three columns
+            <div class="inspo-item"><img src="img/basquiat.jpg" alt="Basquiat's Work"></div>
+        </div>
+        <div class="col">
+            <h1>Keith Haring</h1>
+          One of three columns
+            <div class="inspo-item"><img src="img/haring.jpg" alt="Haring's Work"></div>
+        </div>
+      </div>
     </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-  </div>
-</div>
+</section>
 </body>
 </html>
