--- a/about.html
+++ b/about.html
@@ -24,8 +24,9 @@
     <section class="about">
         <div class="container">
             <h1>About Me</h1>
-            <p>Hello there! I'm Mariann Glasier and I'm a Computational Media major at the Georgia Institute of Technology. I spend most of my time sketching and drawing and I love computers, which inspired me to choose Computational Media here at Tech. I grew up constantly creating art and this website includes pieces that I've worked on over the years. Thank you for exploring my portfolio!</p>
+            <p>Throughout my entire life, I've always had a deep appreciation for art and creation. Growing up, I always had a pencil in hand, ready to skecth. As I've gotten older, I've realized that I also have a curiosity about computers and design. This realization, plus my longheld passion for art and art history, influenced me to choose to major in Computational Media here at Georgia Tech. My portfolio includes physical artworks that I've drawn or painted over the years as well as artists and artworks that I find inspiring. Thank you for checking out my portfolio!</p>
         </div>
+        <div class="pfp"><img src="img/pfp.jpg" alt="Profile Picture"></div>
     </section>
 
     <section class="contact">
