--- a/inspiration.html
+++ b/inspiration.html
@@ -49,5 +49,11 @@
       </div>
     </div>
 </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; My Portfolio</p>
+        </div>
+    </footer>
 </body>
 </html>
