--- a/gallery.html
+++ b/gallery.html
@@ -34,4 +34,11 @@
             </div>
         </div>
     </section>
+
+  <footer>
+        <div class="container">
+            <p>&copy; My Portfolio</p>
+        </div>
+    </footer>
+</body>
 </html>
