--- a/gallery.html
+++ b/gallery.html
@@ -28,9 +28,13 @@
             <h2>My Works</h2>
             <div class="gallery-grid">
                 <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
+              <p>Hi</p>
                 <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
+              <p>What's up</p>
                 <div class="gallery-item"><img src="img/work3.jpg" alt="Work 3"></div>
+              <p>Hey</p>
                 <div class="gallery-item"><img src="img/work4.jpg" alt="Work 4"></div>
+              <p>Hello</p>
             </div>
         </div>
     </section>
