--- a/inspiration.html
+++ b/inspiration.html
@@ -33,7 +33,7 @@
       <div class="row align-items-center">
         <div class="col">
             <h1> Gustav Klimt</h1>
-          One of three columns
+          Danaë. 1907.
             <div class="inspo-item"><img src="img/klimt.jpg" alt="Klimt's Work"></div>
         </div>
         <div class="col">
