--- a/inspiration.html
+++ b/inspiration.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col">
             <h1>Jean-Michele Basquiat</h1>
-          One of three columns
+          Horn Players. 1983.
             <div class="inspo-item"><img src="img/basquiat.jpg" alt="Basquiat's Work"></div>
         </div>
         <div class="col">
