--- a/inspiration.html
+++ b/inspiration.html
@@ -43,7 +43,7 @@
         </div>
         <div class="col">
             <h1>Keith Haring</h1>
-          One of three columns
+          Untitled. 1988.
             <div class="inspo-item"><img src="img/haring.jpg" alt="Haring's Work"></div>
         </div>
       </div>
