--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
             <h2>My Works</h2>
             <div class="gallery-grid">
                 <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
-              <p>Hi</p>
+              <p>This piece focuses on the longlasting impact that fashion and childhood dolls can have on a child's life. Depicted is a college student majoring in fashion as she works on her final piece for the semester.</p>
                 <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
               <p>What's up</p>
                 <div class="gallery-item"><img src="img/work3.jpg" alt="Work 3"></div>
