--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
                 <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
               <p>This piece focuses on the longlasting impact that fashion and childhood dolls can have on a child's life. Depicted is a college student majoring in fashion as she works on her final piece for the semester.</p>
                 <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
-              <p>What's up</p>
+              <p>idk what this pic is yet lolol</p>
                 <div class="gallery-item"><img src="img/work3.jpg" alt="Work 3"></div>
               <p>Hey</p>
                 <div class="gallery-item"><img src="img/work4.jpg" alt="Work 4"></div>
