--- a/gallery.html
+++ b/gallery.html
@@ -30,11 +30,11 @@
                 <div class="gallery-item"><img src="img/work1.jpg" alt="Work 1"></div>
               <p>This piece focuses on the longlasting impact that fashion and childhood dolls can have on a child's life. Depicted is a college student majoring in fashion as she works on her final piece for the semester.</p>
                 <div class="gallery-item"><img src="img/work2.jpg" alt="Work 2"></div>
-              <p>idk what this pic is yet lolol</p>
+              <p>This work shows the bond between generations of women shared through fashion and the passing down of knowledge of how to sew and repair clothes. This is depcited through a mother introducing her daughter to a sewing machine.</p>
                 <div class="gallery-item"><img src="img/work3.jpg" alt="Work 3"></div>
-              <p>Hey</p>
+              <p>In this piece, I wanted to capture the universality of fashion and appearance for women. Across cultures, everyone, not just women, tidy themselves up in the mirror in order to make sure they look presentable.</p>
                 <div class="gallery-item"><img src="img/work4.jpg" alt="Work 4"></div>
-              <p>Hello</p>
+              <p>This work was my first time making a print. I really enjoyed the process of etching and I'm very happy with the final result.</p>
             </div>
         </div>
     </section>
